--- a/economic-theory-923-main/checkout.html
+++ b/economic-theory-923-main/checkout.html
@@ -42,7 +42,8 @@
             </form>
         </div>
     </div>
-    </div>       
+    </div> 
+    <div id="footer"></div>     
 </body>
 </html>
 <script src="checkout.js" type="module"></script>
