--- a/economic-theory-923-main/footer.html
+++ b/economic-theory-923-main/footer.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <link rel="stylesheet" href="./footer.css">
 </head>
 
 <body>
@@ -20,6 +20,8 @@
                     </p>
                 </div>
             </div>
+
+
             <div id="footer_mid">
                 <div>
                     <div><h3>COMPANY</h3></div>
@@ -67,6 +69,8 @@
                     </div>
                 </div>
             </div>
+
+            
             <div id="footer_down">
                 <div>
                     <a href="">Medicines</a>
