--- a/economic-theory-923-main/otp.html
+++ b/economic-theory-923-main/otp.html
@@ -8,18 +8,22 @@
     <link rel="stylesheet" href="otp.css">
 </head>
 <body>
+    <div id="navbar"></div>
     <div id="back"></div>
     <div id="otp0">
         <h2>Enter your OTP</h2>
+
         <div id="otp">
-              <input type="text" maxlength="1" id="first">
-              <input type="text" maxlength="1" id="second">
-              <input type="text" maxlength="1"id="third">
-              <input type="text" maxlength="1" id="fourth">
+              <input type="text"  >
+              <input type="text" >
+              <input type="text">
+              <input type="text">
         </div>
+
         <button id="btn">Enter</button>
         <p> Have not received the OTP ?<a href="payment.html">Resend</a></p>
     </div>
+    <div id="footer"></div>
 </body>
 </html>
-<script src="otp.js"></script>
+<script src="./otp.js"></script>
