--- a/economic-theory-923-main/payment.html
+++ b/economic-theory-923-main/payment.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="payment.css">
 </head>
 <body>
+    <div id="navbar"></div>
    <div id="back"></div>
 
 
@@ -30,6 +31,7 @@
             <button id="btn">Pay</button>
         </div>
     </div>
+    <div  id="footer"></div>
 </body>
 </html>
 <script src="payment.js" type="module"></script>
