--- a/economic-theory-923-main/ayush.html
+++ b/economic-theory-923-main/ayush.html
@@ -76,6 +76,49 @@ select{
 }
 
 
+
+
+
+
+@media all and (min-width:480px) and (max-width:720px){
+    #container{
+     margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    width: 100%;
+    gap: 20px;
+    margin-top: 30px;
+    padding: 30px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+}
+}
+
+@media all and (min-width:320px) and (max-width:479px){
+    #container{
+     margin: auto;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    width: 100%;
+    gap: 10px;
+    margin-top: 30px;
+    padding: 30px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </style>
 <body>
     <div id="navbar"></div>
