--- a/economic-theory-923-main/navbar.html
+++ b/economic-theory-923-main/navbar.html
@@ -1,79 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="./navbar.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
-    />
+  </head>
+  <body>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
-<body>
-    <div id="nav_container">
-        <div id="navbar_hiru">
-            <div id="navbar_hiru1">
-                <div id="search_up">
-                    <div>
-                        <img src="netmeds_logo.png" alt="">
-                    </div>
-                    <div id="input">
-                        <input type="text" id="search" placeholder="Search for medicine & wellness products...">
-                    </div>
-                    <div class="sign_hiru">
-                        <a href="https://www.netmeds.com/upload_prescription">Upload</a>
-                    </div>
-                    <div class="sign_hiru">
-                        <a href=""><span class="material-symbols-outlined"> shopping_cart </span>Cart</a>
-                    </div>
-                    <div class="sign_hiru">
-                        <a href="./signup.html"><i class="glyphicon glyphicon-user"></i> singUp</a>
-                        <a href="./login.html"><i class="glyphicon glyphicon-user"></i> Login</a>
-                    </div>
-                </div>
-                <div id="search_down">
-                    <div class="sign_hiru">
-                        <a href="./medicine.html">Medicine</a>
-                    </div>
-                    <div class="sign_hiru">
-                        <a href="./wellness.html">Wellness</a>
-                    </div>
-                    <div class="sign_hiru">
-                        <a href="https://www.netmeds.com/health-packages">Lab Tests</a>
-                    </div>
-                    <div class="sign_hiru">
-                        <a href="https://www.netmeds.com/beauty">Beauty</a>
-                    </div>
-                    <div class="sign_hiru">
-                        <a href="health.html">Health Corner</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="page_link">
-            <div>
-                <div><a href="./covid.html">COVID Essentials</a></div>
-                <div><a href="./diabetes.html">Diabetes</a></div>
-                <div><a href="./eyewear.html">Eyewear</a></div>
-                <div><a href="./ayush.html">Ayush</a></div>
-                <div><a href="./ayurveda.html">Ayurvedic</a></div>
-                <div><a href="./homeopathy.html">Hemeopathy</a></div>
-                <div><a href="./fitness.html">Fitness</a></div>
-                <div><a href="./mom&baby.html">Mom & Baby</a></div>
-                <div><a href="./devices.html">Devices</a></div>
-                <div><a href="./surgical.html">Surgicals</a></div>
-                <div><a href="./wellness.html">Sexual Wellness</a></div>
-                <div><a href="./treatment.html">Treatments</a></div>
-            </div>
-        </div>
+
+    <nav class="navbar">
+      <div>
+        <img
+          id="img"
+          src="https://bsmedia.business-standard.com/_media/bs/img/article/2019-05/09/full/1557392501-4904.jpg"
+          alt=""
+        />
+        <a href="./index.html"></a>
+      </div>
+
+      <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+
+      <div class="navbar-links">
+        <ul>
+          <li>
+            <input
+              id="input"
+              type="text"
+              id="search"
+              placeholder="Search for medicine & wellness products..."
+            />
+          </li>
+          <li>
+            <a href="./cart.html">Cart</a>
+          </li>
+          <li>
+            <a href="./signup.html"
+              ><i class="glyphicon glyphicon-user"></i> singUp</a
+            >
+          </li>
+          <li>
+            <a href="./login.html"
+              ><i class="glyphicon glyphicon-user"></i> Login</a
+            >
+          </li>
+        </ul>
+      </div>
+</nav>
+
+
+<nav class="navbar">
+    <a href="#" class="toggle-button-two">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+
+
+    <div class="navbar-links-two">
+        <ul>
+          <li><a href="./medicine.html">Medicine</a></li>
+          <li><a href="./wellness.html">Wellness</a></li>
+          <li>
+            <a href="https://www.netmeds.com/health-packages">Lab Tests</a>
+          </li>
+          <li><a href="https://www.netmeds.com/beauty">Beauty</a></li>
+          <li><a href="health.html">Health Corner</a></li>
+        </ul>
+      </div>
+</nav>
+<div id="page_link">
+    <div id="page">
+        <div><a href="./covid.html">COVID Essentials</a></div>
+        <div><a href="./diabetes.html">Diabetes</a></div>
+        <div><a href="./eyewear.html">Eyewear</a></div>
+        <div><a href="./ayush.html">Ayush</a></div>
+        <div><a href="./ayurveda.html">Ayurvedic</a></div>
+        <div><a href="./homeopathy.html">Hemeopathy</a></div>
+        <div><a href="./fitness.html">Fitness</a></div>
+        <div><a href="./mom&baby.html">Mom & Baby</a></div>
+        <div><a href="./devices.html">Devices</a></div>
+        <div><a href="./surgical.html">Surgicals</a></div>
+        <div><a href="./wellness.html">Sexual Wellness</a></div>
+        <div><a href="./treatment.html">Treatments</a></div>
     </div>
-</body>
+</div>
+
+
+
+
+
+
+  </body>
 </html>
+<script>
+  const toggleButton = document.getElementsByClassName("toggle-button")[0];
+  const navbarLinks = document.getElementsByClassName("navbar-links")[0];
+
+  toggleButton.addEventListener("click", () => {
+    navbarLinks.classList.toggle("active");
+  });
+
+
+
+//   const toggleButtonTwo = document.getElementsByClassName("toggle-button")[0];
+//   const navbarLinksTwo = document.getElementsByClassName("navbar-links")[0];
+
+//   toggleButtonTwo.addEventListener("click", () => {
+//     navbarLinksTwo.classList.toggle("active");
+//   });
+
+
+</script>
